@@ -2,11 +2,5 @@
 # For use with the frame action button sprites
 flib-keep-open=Keep open
 flib-settings=Settings
-
-[mod-setting-name]
-flib-dictionary-levels-per-batch=Dictionary levels per batch [img=info]
-flib-translations-per-tick=Translations per tick [img=info]
-
-[mod-setting-description]
-flib-dictionary-levels-per-batch=How many translation "levels" (sets of 20 translations) to nest in each dictionary batch. Decrease this number if you run into multiplayer timeout issues.
-flib-translations-per-tick=How many translation operations to perform per tick. Decrease this number if you are being dropped from a multiplayer game due to slow internet.\n\nDecreasing the number will reduce bandwidth usage, but translations will take longer to complete.
+# Translation progress GUI
+flib-translating-dictionaries=Translating dictionaries
